<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="quick_settings_brighness_category"
        android:title="@string/qs_brightness_slider_category">

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="qs_show_brightness"
            android:title="@string/qs_brightness_slider_title"
            android:summary="@string/qs_brightness_slider_summary"
            android:defaultValue="true"/>

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="sysui_qqs_brightness_slider"
            android:title="@string/quick_qs_brightness_slider_title"
            android:summary="@string/quick_qs_brightness_slider_summary"
            android:dependency="qs_show_brightness"
            android:defaultValue="false"/>

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="qs_show_auto_brightness_button"
            android:title="@string/brightness_icon_title"
            android:summary="@string/brightness_icon_summary"
            android:defaultValue="true"
            android:dependency="qs_show_brightness"/>

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="qs_brightness_position_bottom"
            android:title="@string/qs_brightness_position_bottom_title"
            android:summary="@string/qs_brightness_position_bottom_summary"
            android:defaultValue="false"
            android:dependency="qs_show_brightness" />

    </PreferenceCategory>
    
    <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="quick_settings_vibrate"
            android:title="@string/quick_settings_vibrate_title"
            android:summary="@string/quick_settings_vibrate_summary"
            android:defaultValue="false"/>

</PreferenceScreen>